--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "start": "node ./bin/startup.js",
         "run": "npm run clean && npm run build && clear && npm run start",
         "autotranspilation": "tsc --watch",
-        "autorun": "nodemon ./bin/startup.js --port 3001 --serial /dev/ttyUSB0 --log",
+        "autorun": "nodemon ./bin/startup.js --port 3001 --serial COM9 --log",
         "serve": "npm run clean && run-p autotranspilation autorun",
+        "serve:win": "run-p autotranspilation autorun",
         "lint": "tslint -c tslint.json './src/**/*.{ts,tsx}' --format msbuild",
         "test": "jest --runInBand",
         "build": "tsc -p .",
